...
              fontWeight: t.type.weight.medium,
            }}
          >
            {i18n.t("addPlace.field.name")}
          </Text>
          <Input
            testID="add-place-name"
            value={name}
            onChangeText={onChangeName}
            accessibilityLabel={i18n.t("addPlace.field.name")}
          />
        </View>

...
